[package]
name = "orbital_renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixels = "0.9.0"
winit = "0.27.4"
# n_renderer = { git = "https://github.com/De-Zwaan/n-Renderer.git" }
n_renderer = { path = "../n-Renderer"}

# file size optinmailsations
[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1